Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberNumber.quorum
number n = 7.5
output n